# pm-ru-content-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  start_admin.py
alembic/: env.py
alembic/versions/: 0001_initial_jobs_and_manifests.py
config/: template_registry.json
docs/: architecture.md  chair_quality_contract.md  checkpoint_review_template.md  figma_chair_slides_spec.md  figma_conventions.md  figma_template_spec.md  iteration2_checkpoint_packet.md  nika_admin_guide.md  phased_plan.md  redmine_setup_guide.md  repo_structure.md  task_management.md
figma_plugin/: code.js  manifest.json  package-lock.json  package.json  tsconfig.json  ui.html
figma_plugin/src/: code.ts  ui.html
scripts/: analyze_figma.py  analyze_figma2.py  generate_brief_pdf.py  generate_mvp_update_pdf.py  generate_nika_guide_pdf.py  generate_presentation_pdf.py  parse_figma.py  sync_figma_cache.py  test_admin_pipeline.py  test_dry_run.py  test_fill_job.py  test_render_slide.py
src/content_agent/: config.py  main.py
src/content_agent/admin/: __init__.py  routes.py  store.py
src/content_agent/db/: session.py
src/content_agent/integrations/: slide_builder.py  yadisk.py
src/content_agent/llm/: base.py
src/content_agent/models/: __init__.py  fill_job.py  job.py  task_manifest.py
src/content_agent/qa/: rules.py  validator.py
src/content_agent/schemas/: task_manifest.py
src/content_agent/templates/: admin.html  plugin_ui.html
tests/: conftest.py
tests/integration/: test_redmine_ingest.py
tests/unit/: test_manifest_builder.py  test_qa_rules.py
(+30 files in other folders)
