[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pm-ru-content-agent"
version = "0.1.0"
description = "Automated pipeline for assembling marketplace product cards"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Task queue
    "celery[redis]>=5.4.0",
    "flower>=2.0.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # HTTP clients
    "httpx>=0.27.0",
    # Image rendering
    "Pillow>=10.4.0",
    # PDF generation
    "fpdf2>=2.8.0",
    # Storage
    "boto3>=1.34.0",
    # LLM
    "openai>=1.35.0",
    # Logging
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "fpdf2>=2.8.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-boto3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/content_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/content_agent"]
omit = ["*/tests/*", "*/__init__.py"]
